Add ocsp-tests to pki-ci.yml

--- a/.github/workflows/pki-ci.yml
+++ b/.github/workflows/pki-ci.yml
@@ -26,6 +26,12 @@ jobs:
     with:
       db-image: ${{ needs.call-build-workflow.outputs.db-image }}
 
+  ocsp-tests:
+    needs: build
+    uses: ./.github/workflows/ocsp-tests.yml
+    with:
+      db-image: ${{ needs.call-build-workflow.outputs.db-image }}
+
   tools-tests:
     needs: build
     uses: ./.github/workflows/tools-tests.yml
