--- a/.github/workflows/ocsp-tests.yml
+++ b/.github/workflows/ocsp-tests.yml
@@ -1,23 +1,19 @@
 name: OCSP Tests
 
-on: [push, pull_request]
+on:
+  workflow_call:
+    inputs:
+      db-image:
+        required: true
+        type: string
 
 jobs:
-  call-build-workflow:
-    uses: ./.github/workflows/build.yml
-    with:
-      key_container: ocsp
-    secrets: inherit
-
   # docs/installation/ocsp/Installing_OCSP.md
   ocsp-test:
     name: Testing OCSP
-    needs: [call-build-workflow]
     runs-on: ubuntu-latest
     env:
       SHARED: /tmp/workdir/pki
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -25,11 +21,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-ocsp-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-ocsp-runner.tar
+          key: pki-runner
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-ocsp-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -38,7 +34,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh ds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: ds.example.com
           PASSWORD: Secret.123
 
@@ -266,18 +262,15 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-${{ matrix.os }}
+          name: ocsp
           path: |
             /tmp/artifacts/pki
 
   ocsp-separate-test:
     name: Testing OCSP on separate instance
-    needs: [call-build-workflow]
     runs-on: ubuntu-latest
     env:
       SHARED: /tmp/workdir/pki
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -285,11 +278,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-ocsp-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-ocsp-runner.tar
+          key: pki-runner
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-ocsp-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -298,7 +291,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh cads
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: cads.example.com
           PASSWORD: Secret.123
 
@@ -334,7 +327,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh ocspds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: ocspds.example.com
           PASSWORD: Secret.123
 
@@ -406,7 +399,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-separate-ca-${{ matrix.os }}
+          name: ocsp-separate-ca
           path: |
             /tmp/artifacts/ca
 
@@ -414,19 +407,16 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-separate-ocsp-${{ matrix.os }}
+          name: ocsp-separate-ocsp
           path: |
             /tmp/artifacts/ocsp
 
   # docs/installation/ocsp/Installing_OCSP_with_External_Certificates.md
   ocsp-external-certs-test:
     name: Testing OCSP with external certificates
-    needs: [call-build-workflow]
     runs-on: ubuntu-latest
     env:
       SHARED: /tmp/workdir/pki
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -434,11 +424,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-ocsp-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-ocsp-runner.tar
+          key: pki-runner
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-ocsp-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -447,7 +437,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh cads
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: cads.example.com
           PASSWORD: Secret.123
 
@@ -488,7 +478,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh ocspds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: ocspds.example.com
           PASSWORD: Secret.123
 
@@ -626,7 +616,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-external-certs-ca-${{ matrix.os }}
+          name: ocsp-external-certs-ca
           path: |
             /tmp/artifacts/ca
 
@@ -634,19 +624,16 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-external-certs-ocsp-${{ matrix.os }}
+          name: ocsp-external-certs-ocsp
           path: |
             /tmp/artifacts/ocsp
 
   # docs/installation/ocsp/Installing_OCSP_with_External_Certificates.md
   ocsp-cmc-test:
     name: Testing OCSP with CMC
-    needs: [call-build-workflow]
     runs-on: ubuntu-latest
     env:
       SHARED: /tmp/workdir/pki
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -654,11 +641,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-ocsp-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-ocsp-runner.tar
+          key: pki-runner
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-ocsp-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -667,7 +654,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh cads
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: cads.example.com
           PASSWORD: Secret.123
 
@@ -708,7 +695,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh ocspds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: ocspds.example.com
           PASSWORD: Secret.123
 
@@ -925,7 +912,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-cmc-ca-${{ matrix.os }}
+          name: ocsp-cmc-ca
           path: |
             /tmp/artifacts/ca
 
@@ -933,19 +920,16 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-cmc-ocsp-${{ matrix.os }}
+          name: ocsp-cmc-ocsp
           path: |
             /tmp/artifacts/ocsp
 
   # docs/installation/ocsp/Installing_OCSP_Clone.md
   ocsp-clone-test:
     name: Testing OCSP clone
-    needs: [call-build-workflow]
     runs-on: ubuntu-latest
     env:
       SHARED: /tmp/workdir/pki
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -953,11 +937,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-ocsp-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-ocsp-runner.tar
+          key: pki-runner
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-ocsp-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -966,7 +950,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh primaryds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: primaryds.example.com
           PASSWORD: Secret.123
 
@@ -1010,7 +994,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh secondaryds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: secondaryds.example.com
           PASSWORD: Secret.123
 
@@ -1070,7 +1054,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh tertiaryds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: tertiaryds.example.com
           PASSWORD: Secret.123
 
@@ -1177,7 +1161,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-clone-primary-${{ matrix.os }}
+          name: ocsp-clone-primary
           path: |
             /tmp/artifacts/primary
 
@@ -1185,7 +1169,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-clone-secondary-${{ matrix.os }}
+          name: ocsp-clone-secondary
           path: |
             /tmp/artifacts/secondary
 
@@ -1193,19 +1177,16 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-clone-tertiary-${{ matrix.os }}
+          name: ocsp-clone-tertiary
           path: |
             /tmp/artifacts/tertiary
 
   # https://github.com/dogtagpki/pki/wiki/Installing-Standalone-OCSP
   ocsp-standalone-test:
     name: Testing standalone OCSP
-    needs: [call-build-workflow]
     runs-on: ubuntu-latest
     env:
       SHARED: /tmp/workdir/pki
-    strategy:
-      matrix: ${{ fromJSON(needs.init.outputs.matrix) }}
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -1213,11 +1194,11 @@ jobs:
       - name: Retrieve runner image
         uses: actions/cache@v3
         with:
-          key: pki-ocsp-runner-${{ matrix.os }}-${{ github.run_id }}
-          path: pki-ocsp-runner.tar
+          key: pki-runner
+          path: pki-runner.tar
 
       - name: Load runner image
-        run: docker load --input pki-ocsp-runner.tar
+        run: docker load --input pki-runner.tar
 
       - name: Create network
         run: docker network create example
@@ -1226,7 +1207,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh cads
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: cads.example.com
           PASSWORD: Secret.123
 
@@ -1265,7 +1246,7 @@ jobs:
         run: |
           tests/bin/ds-container-create.sh ocspds
         env:
-          IMAGE: ${{ needs.init.outputs.db-image }}
+          IMAGE: ${{ inputs.db-image}}
           HOSTNAME: ocspds.example.com
           PASSWORD: Secret.123
 
@@ -1404,7 +1385,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-standalone-ca-${{ matrix.os }}
+          name: ocsp-standalone-ca
           path: |
             /tmp/artifacts/ca
 
@@ -1412,6 +1393,6 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: ocsp-standalone-ocsp-${{ matrix.os }}
+          name: ocsp-standalone-ocsp
           path: |
             /tmp/artifacts/ocsp
